Prevent a stretched image.

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -79,12 +79,11 @@ body {
 
 .carousel .item {
   height: 340px;
+  background: #DADADA;
 }
 .carousel img {
-  position: absolute;
   top: 0;
-  left: 0;
-  min-width: 100%;
+  margin: 0 auto;
   height: 340px;
 }
 
